--- a/.gitignore
+++ b/.gitignore
@@ -46,10 +46,14 @@ buck-out/
 # It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
-# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+# https://docs.fastlane.tools/best-practices/source-control/
 
-ios/fastlane/report.xml
-ios/fastlane/Preview.html
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
 
-ios/Tisdagsgolfen.app.dSYM.zip
+# Bundle artifact
+*.jsbundle
+
+# env files
 .env*
