--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,23 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="se.calces.tisdagsgolfen"
-    android:versionCode="1"
-    android:versionName="1.0">
+    package="se.calces.tisdagsgolfen">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
-    <uses-sdk
-        android:minSdkVersion="23"
-        android:targetSdkVersion="25" />
-
     <application
       android:name=".MainApplication"
-      android:allowBackup="true"
       android:label="@string/app_name"
-      android:icon="@mipmap/screen"
-      android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+      android:icon="@mipmap/ic_launcher"
+      android:allowBackup="false"
+      android:theme="@style/AppTheme">
       <activity
-        android:launchMode="singleTop"
         android:name=".MainActivity"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
