--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.2.7",
-    "apollo-client": "^2.3.8",
-    "apollo-link": "^1.2.2",
-    "apollo-link-context": "^1.0.8",
-    "apollo-link-http": "^1.5.4",
-    "apollo-link-state": "^0.4.1",
-    "graphql": "^0.13.2",
-    "graphql-tag": "^2.9.2",
-    "immutability-helper": "^2.7.1",
+    "apollo-cache-inmemory": "^1.3.11",
+    "apollo-client": "^2.4.7",
+    "apollo-link": "^1.2.4",
+    "apollo-link-context": "^1.0.10",
+    "apollo-link-http": "^1.5.7",
+    "apollo-link-state": "^0.4.2",
+    "graphql": "14.0.2",
+    "graphql-tag": "^2.10.0",
+    "immutability-helper": "^2.9.0",
     "lodash.groupby": "^4.6.0",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
@@ -47,36 +47,35 @@
     "react-style-proptype": "^3.2.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-links": "^3.4.10",
-    "@storybook/react-native": "^3.4.10",
+    "@storybook/addon-actions": "^4.1.0",
+    "@storybook/addon-links": "^4.1.0",
+    "@storybook/react-native": "^4.1.0",
     "apollo-codegen": "^0.20.2",
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.4.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react-native": "5.0.2",
     "babylon": "^6.17.4",
-    "eslint": "^5.3.0",
+    "eslint": "^5.10.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-config-standard": "^11.0.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-import-resolver-babel-module": "^4.0.0",
-    "eslint-plugin-graphql": "^2.1.1",
+    "eslint-plugin-graphql": "^3.0.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-react": "^7.11.0",
-    "eslint-plugin-react-native": "^3.2.1",
+    "eslint-plugin-react-native": "^3.5.0",
     "eslint-plugin-react-perf": "^2.0.9",
-    "eslint-plugin-standard": "^3.1.0",
-    "jest": "^23.5.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "jest": "^23.6.0",
     "metro-react-native-babel-preset": "^0.48.5",
     "prettier": "^1.14.2",
-    "react-dom": "^16.4.2",
-    "react-test-renderer": "^16.4.2",
-    "schedule": "0.4.0"
+    "react-test-renderer": "^16.6.3",
+    "schedule": "0.5.0"
   },
   "jest": {
     "preset": "react-native"
