--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"],
-  "sourceMaps": true
+  "presets": ["module:metro-react-native-babel-preset"]
 }
