--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "clean": "watchman watch-del-all && rm -rf $TMPDIR/react-*",
-    "test": "jest",
-    "lint": "eslint src",
+    "start": "react-native start",
+    "lint": "npm run lint:compile && npm run lint:ts",
+    "lint:compile": "tsc --skipLibCheck",
+    "lint:ts": "tslint -p .",
     "graphql:schema": "apollo-codegen introspect-schema https://www.tisdagsgolfen.se/api/graphql --output schema.json",
     "graphql:gentypes": "apollo-codegen generate src/graph/**/*.js --schema schema.json --target typescript --output operation-result-types.ts",
-    "storybook": "storybook start -p 7007",
+    "android": "react-native run-android",
     "android:build:dev": "cd android && ./gradlew assembleRelease",
     "android:build:prod": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
     "android:emulator": "emulator -avd Nexus6-android7.1.1-apiLevel25",
-    "android": "react-native run-android",
     "ios": "react-native run-ios --simulator \"iPhone 8\"",
     "ios:storybook": "react-native run-ios --simulator \"iPhone 8\" --scheme TGStorybook",
-    "prettier": "prettier --write 'src/**/*.js'",
-    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
+    "storybook": "storybook start -p 7007",
+    "prettier": "prettier \"**/*.ts?(x)\" \"**/*.js?(x)\" \"**/*.json\" \"**/*.scss\" --write"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.3.11",
@@ -29,12 +28,13 @@
     "graphql": "14.0.2",
     "graphql-tag": "^2.10.0",
     "immutability-helper": "^2.9.0",
+    "jsc-android": "^236355.x.x",
     "lodash.groupby": "^4.6.0",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
-    "react": "16.4.1",
+    "react": "16.6.3",
     "react-apollo": "^2.1.11",
     "react-native": "0.57.7",
     "react-native-config": "^0.11.5",
@@ -43,41 +43,27 @@
     "react-native-onesignal": "^3.2.6",
     "react-native-segmented-view": "^2.0.0",
     "react-native-slowlog": "^1.0.2",
-    "react-navigation": "^2.11.2",
-    "react-style-proptype": "^3.2.1"
+    "react-navigation": "^3.0.8"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.1.2",
     "@storybook/addon-actions": "^4.1.0",
     "@storybook/addon-links": "^4.1.0",
     "@storybook/react-native": "^4.1.0",
+    "@types/react": "^16.4.16",
+    "@types/react-native": "^0.56.24",
     "apollo-codegen": "^0.20.2",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.4.2",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react-native": "5.0.2",
     "babylon": "^6.17.4",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-import-resolver-babel-module": "^4.0.0",
-    "eslint-plugin-graphql": "^3.0.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-node": "^8.0.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.11.0",
-    "eslint-plugin-react-native": "^3.5.0",
-    "eslint-plugin-react-perf": "^2.0.9",
-    "eslint-plugin-standard": "^4.0.0",
-    "jest": "^23.6.0",
     "metro-react-native-babel-preset": "^0.48.5",
     "prettier": "^1.14.2",
-    "react-test-renderer": "^16.6.3",
-    "schedule": "0.5.0"
-  },
-  "jest": {
-    "preset": "react-native"
+    "schedule": "0.5.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-react": "^3.6.0",
+    "tslint-plugin-graphql": "^0.0.6",
+    "tslint-sonarts": "^1.8.0",
+    "typescript": "^3.1.1"
   }
 }
