--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lint": "yarn run lint:compile && yarn run lint:ts",
     "lint:compile": "tsc --skipLibCheck",
     "lint:ts": "tslint -p .",
-    "graphql:schema": "apollo-codegen introspect-schema https://www.tisdagsgolfen.se/api/graphql --output schema.json",
-    "graphql:gentypes": "apollo-codegen generate src/graph/**/*.js --schema schema.json --target typescript --output operation-result-types.ts",
+    "graphql:schema": "apollo-codegen introspect-schema http://192.168.1.246:3000/api/graphql --output schema.json",
+    "graphql:gentypes": "apollo-codegen generate src/graph/**/*.ts --schema schema.json --target typescript --addTypename --output operation-result-types.ts",
     "android": "react-native run-android",
     "android:build:dev": "cd android && ./gradlew assembleRelease",
     "android:build:prod": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
@@ -51,7 +51,7 @@
     "@storybook/react-native": "^4.1.0",
     "@types/react": "^16.4.16",
     "@types/react-native": "^0.56.24",
-    "apollo-codegen": "^0.20.2",
+    "apollo": "^2.1.8",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react-native": "5.0.2",
     "babylon": "^6.17.4",
