got the app running again

--- a/android/.project
+++ b/android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tisdagsgolfen</name>
+	<name>Tisdagsgolfen</name>
 	<comment>Project tisdagsgolfen created by Buildship.</comment>
 	<projects>
 	</projects>
