--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "android": "react-native run-android",
     "android:build:dev": "cd android && ./gradlew assembleRelease",
     "android:build:prod": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
-    "android:emulator": "emulator -avd Nexus6-android7.1.1-apiLevel25",
+    "android:emulator": "emulator @Nexus_6P_API_27 -netdelay none -netspeed full",
     "ios": "react-native run-ios --simulator \"iPhone 8\"",
     "ios:storybook": "react-native run-ios --simulator \"iPhone 8\" --scheme TGStorybook",
     "storybook": "storybook start -p 7007",
@@ -53,6 +53,7 @@
     "@storybook/react-native": "^4.1.0",
     "@types/react": "^16.4.16",
     "@types/react-native": "^0.56.24",
+    "@types/react-navigation": "^2.13.8",
     "apollo": "^2.1.8",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react-native": "5.0.2",
