--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "lodash.groupby": "^4.6.0",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
-    "moment": "^2.22.2",
+    "moment": "^2.23.0",
     "react": "16.6.3",
-    "react-apollo": "^2.1.11",
-    "react-native": "0.57.7",
-    "react-native-config": "^0.11.5",
+    "react-apollo": "^2.3.2",
+    "react-native": "0.57.8",
+    "react-native-config": "^0.11.7",
     "react-native-device-log": "^1.0.2",
-    "react-native-dom": "0.2.0",
+    "react-native-dom": "0.4.1",
     "react-native-gesture-handler": "^1.0.10",
-    "react-native-onesignal": "^3.2.6",
+    "react-native-onesignal": "3.2.11",
     "react-native-segmented-view": "^2.0.0",
     "react-native-slowlog": "^1.0.2",
     "react-navigation": "^3.0.8"
@@ -47,14 +47,14 @@
   "devDependencies": {
     "@babel/runtime": "^7.1.2",
     "@types/react": "^16.4.16",
-    "@types/react-native": "^0.56.24",
+    "@types/react-native": "0.57.18",
     "@types/react-navigation": "^2.13.8",
     "apollo": "^2.1.8",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-preset-react-native": "5.0.2",
     "babylon": "^6.17.4",
     "metro-react-native-babel-preset": "^0.48.5",
-    "prettier": "^1.14.2",
+    "prettier": "1.15.3",
     "schedule": "0.5.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
