react-native-screens and react-native-instabug + dep upggrade

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,8 @@ configurations.all {
 }
 
 dependencies {
+    compile project(':instabug-reactnative')
+    compile project(':react-native-screens')
     compile project(':react-native-gesture-handler')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
