--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -147,6 +147,7 @@ configurations.all {
 }
 
 dependencies {
+    compile project(':react-native-vector-icons')
     compile project(':instabug-reactnative')
     compile project(':react-native-screens')
     compile project(':react-native-gesture-handler')
