--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.3.11",
+    "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.4.7",
     "apollo-link": "^1.2.4",
     "apollo-link-context": "^1.0.10",
@@ -39,10 +40,13 @@
     "react-native-config": "^0.11.7",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-onesignal": "3.2.11",
+    "react-native-paper": "^2.4.0",
     "react-native-screens": "^1.0.0-alpha.17",
     "react-native-segmented-view": "^2.0.0",
     "react-native-slowlog": "^1.0.2",
-    "react-navigation": "^3.0.8"
+    "react-native-vector-icons": "^6.1.0",
+    "react-navigation": "^3.0.8",
+    "react-navigation-material-bottom-tabs": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.47",
